--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,8 @@ services:
     image: confluentinc/cp-kafka:7.5.0
     container_name: orderflow-kafka
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_healthy
     ports:
       - "9092:9092"
       - "9093:9093"
@@ -63,6 +64,7 @@ services:
       interval: 10s
       timeout: 10s
       retries: 5
+      start_period: 30s
     restart: unless-stopped
 
   # Kafka UI (Optional - for managing and viewing Kafka topics)
@@ -70,7 +72,8 @@ services:
     image: provectuslabs/kafka-ui:latest
     container_name: orderflow-kafka-ui
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     ports:
       - "8081:8080"
     environment:
